<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.muni.fi.pa165</groupId>
    <artifactId>eshop-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>eshop Parent</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- property used by spring-boot-starter-parent project to define maven.compiler.source and maven.compiler.target
		     properties that in turn are used by maven-compiler-plugin to specify java source and target version -->
        <java.version>8</java.version>
    </properties>

    <!-- Spring Boot Starter Parent as parent project - this project inherits versions of dependencies and plugins -->
    <!-- see https://docs.spring.io/spring-boot/docs/current/reference/html/using-boot-build-systems.html#using-boot-maven-parent-pom -->
    <!-- update Spring by changing the version here to the current release displayed at https://projects.spring.io/spring-boot/ -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.0.RELEASE</version>
        <relativePath/>
    </parent>

    <!-- specifies versions not defined by the Spring Boot Starter Parent -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.sf.dozer</groupId>
                <artifactId>dozer</artifactId>
                <version>5.5.1</version>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>6.14.3</version>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.taglibs</groupId>
                <artifactId>taglibs-standard-impl</artifactId>
                <version>1.2.5</version>
            </dependency>
            <dependency>
                <groupId>org.apache.taglibs</groupId>
                <artifactId>taglibs-standard-spec</artifactId>
                <version>1.2.5</version>
            </dependency>
            <dependency>
                <groupId>com.sun.activation</groupId>
                <artifactId>javax.activation</artifactId>
                <version>1.2.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
                    </configuration>
                </plugin>
                <!-- embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run -->
                <plugin>
                    <groupId>org.codehaus.cargo</groupId>
                    <artifactId>cargo-maven2-plugin</artifactId>
                    <version>1.7.0</version>
                    <configuration>
                        <container>
                            <containerId>tomcat9x</containerId>
                            <artifactInstaller>
                                <groupId>org.apache.tomcat</groupId>
                                <artifactId>tomcat</artifactId>
                                <version>${tomcat.version}</version>
                            </artifactInstaller>
                        </container>
                    </configuration>
                </plugin>
                <!-- workaround for broken OpenJDK 8u181-b13-2 on Debian/Ubuntu which causes
                     unit tests to fail, see https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>eshop-api</module>
        <module>eshop-persistence</module>
        <module>eshop-service</module>
        <module>eshop-sample-data</module>
        <module>eshop-spring-mvc</module>
        <module>eshop-rest</module>
        <module>eshop-ws</module>
        <module>eshop-angular</module>
    </modules>
</project>
